--- a/package.json
+++ b/package.json
@@ -26,8 +26,9 @@
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.7.1",
     "angular2-uuid": "^1.1.1",
-    "com.darktalker.cordova.screenshot": "^0.1.6",
     "cordova": "^9.0.0",
+    "cordova-browser": "^6.0.0",
+    "cordova-ios": "^5.0.1",
     "core-js": "^2.5.4",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
@@ -47,6 +48,12 @@
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
     "codelyzer": "^5.0.0",
+    "cordova-plugin-device": "^2.0.2",
+    "cordova-plugin-ionic-keyboard": "^2.2.0",
+    "cordova-plugin-ionic-webview": "^4.1.2",
+    "cordova-plugin-splashscreen": "^5.0.2",
+    "cordova-plugin-statusbar": "^2.4.2",
+    "cordova-plugin-whitelist": "^1.3.3",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.1.0",
@@ -62,7 +69,17 @@
   "description": "An Ionic project",
   "cordova": {
     "plugins": {
-      "com.darktalker.cordova.screenshot": {}
-    }
+      "com.darktalker.cordova.screenshot": {},
+      "cordova-plugin-whitelist": {},
+      "cordova-plugin-statusbar": {},
+      "cordova-plugin-device": {},
+      "cordova-plugin-splashscreen": {},
+      "cordova-plugin-ionic-webview": {},
+      "cordova-plugin-ionic-keyboard": {}
+    },
+    "platforms": [
+      "browser",
+      "ios"
+    ]
   }
 }
