--- a/package.json
+++ b/package.json
@@ -26,13 +26,16 @@
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.7.1",
+    "@types/fabric": "^3.4.0",
     "angular2-uuid": "^1.1.1",
+    "com.darktalker.cordova.screenshot": "^0.1.6",
     "cordova": "^9.0.0",
     "cordova-android": "8.1.0",
     "cordova-browser": "^6.0.0",
     "cordova-ios": "^5.0.1",
     "cordova-plugin-file": "^6.0.2",
     "core-js": "^2.5.4",
+    "fabric": "^3.4.0",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
