--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "author": "Ionic Framework",
   "homepage": "https://ionicframework.com/",
   "scripts": {
+    "postinstall": "cd node_modules/fabric && npm run build_with_gestures",
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
