--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.7.1",
+    "@ionic/storage": "^2.2.0",
     "@types/fabric": "^3.4.0",
     "angular2-uuid": "^1.1.1",
     "com.darktalker.cordova.screenshot": "^0.1.6",
