--- a/package.json
+++ b/package.json
@@ -1,8 +1,6 @@
 {
-  "name": "blank",
+  "name": "hands-on-app",
   "version": "0.0.1",
-  "author": "Ionic Framework",
-  "homepage": "https://ionicframework.com/",
   "scripts": {
     "postinstall": "cd node_modules/fabric && npm run build_with_gestures",
     "ng": "ng",
@@ -21,22 +19,9 @@
     "@angular/platform-browser": "~8.1.2",
     "@angular/platform-browser-dynamic": "~8.1.2",
     "@angular/router": "~8.1.2",
-    "@ionic-native/core": "^5.0.0",
-    "@ionic-native/file": "^5.15.0",
-    "@ionic-native/screenshot": "^5.15.0",
-    "@ionic-native/splash-screen": "^5.0.0",
-    "@ionic-native/status-bar": "^5.0.0",
-    "@ionic/angular": "^4.7.1",
-    "@ionic/storage": "^2.2.0",
     "@types/fabric": "^3.4.0",
     "angular2-uuid": "^1.1.1",
     "bootstrap": "^4.3.1",
-    "com.darktalker.cordova.screenshot": "^0.1.6",
-    "cordova": "^9.0.0",
-    "cordova-android": "8.1.0",
-    "cordova-browser": "^6.0.0",
-    "cordova-ios": "^5.0.1",
-    "cordova-plugin-file": "^6.0.2",
     "core-js": "^2.5.4",
     "fabric": "^3.4.0",
     "rxjs": "~6.5.1",
@@ -49,20 +34,12 @@
     "@angular-devkit/core": "~8.1.2",
     "@angular-devkit/schematics": "~8.1.2",
     "@angular/cli": "~8.1.2",
-    "@angular/compiler": "~8.1.2",
     "@angular/compiler-cli": "~8.1.2",
     "@angular/language-service": "~8.1.2",
-    "@ionic/angular-toolkit": "~2.0.0",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
     "codelyzer": "^5.0.0",
-    "cordova-plugin-device": "^2.0.2",
-    "cordova-plugin-ionic-keyboard": "^2.2.0",
-    "cordova-plugin-ionic-webview": "^4.1.2",
-    "cordova-plugin-splashscreen": "^5.0.2",
-    "cordova-plugin-statusbar": "^2.4.2",
-    "cordova-plugin-whitelist": "^1.3.3",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.1.0",
@@ -74,23 +51,5 @@
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
     "typescript": "~3.4.3"
-  },
-  "description": "An Ionic project",
-  "cordova": {
-    "plugins": {
-      "com.darktalker.cordova.screenshot": {},
-      "cordova-plugin-whitelist": {},
-      "cordova-plugin-statusbar": {},
-      "cordova-plugin-device": {},
-      "cordova-plugin-splashscreen": {},
-      "cordova-plugin-ionic-webview": {},
-      "cordova-plugin-ionic-keyboard": {},
-      "cordova-plugin-file": {}
-    },
-    "platforms": [
-      "browser",
-      "ios",
-      "android"
-    ]
   }
 }
