--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~8.1.2",
     "@angular/platform-browser-dynamic": "~8.1.2",
     "@angular/router": "~8.1.2",
+    "@ng-bootstrap/ng-bootstrap": "^5.1.4",
     "@types/fabric": "^3.4.0",
     "angular2-uuid": "^1.1.1",
     "bootstrap": "^4.3.1",
