--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,10 +31,10 @@ jobs:
           docker_layer_caching: false
 
       - run: |
-          docker build -t rsenuatnu.azurecr.io/hands-on-app:$CIRCLE_SHA1 -t rsenuatnu.azurecr.io/hands-on-app:$CIRCLE_SHA1 .
+          docker build -t rsenuatnu.azurecr.io/hands-on-app:$CIRCLE_TAG -t rsenuatnu.azurecr.io/hands-on-app:$CIRCLE_SHA1 .
           docker login -u $DOCKER_USER -p $DOCKER_PASS rsenuatnu.azurecr.io
           docker push rsenuatnu.azurecr.io/hands-on-app:latest
-          docker push rsenuatnu.azurecr.io/hands-on-app:$CIRCLE_SHA1
+          docker push rsenuatnu.azurecr.io/hands-on-app:$CIRCLE_TAG
 
 workflows:
   version: 2
