--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,8 +33,8 @@ jobs:
       - run: |
           docker build -t rsenuatnu.azurecr.io/hands-on-app:$CIRCLE_TAG -t rsenuatnu.azurecr.io/hands-on-app:$CIRCLE_SHA1 .
           docker login -u $DOCKER_USER -p $DOCKER_PASS rsenuatnu.azurecr.io
-          docker push rsenuatnu.azurecr.io/hands-on-app:latest
           docker push rsenuatnu.azurecr.io/hands-on-app:$CIRCLE_TAG
+          docker push rsenuatnu.azurecr.io/hands-on-app:$CIRCLE_SHA1
 
 workflows:
   version: 2
