--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
     "fabric": "^3.4.0",
+    "moment": "^2.24.0",
     "ngx-color-picker": "^8.2.0",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
