--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
     "fabric": "^3.4.0",
+    "file-saver": "^2.0.2",
+    "json2csv": "^4.5.4",
     "ngx-color-picker": "^8.2.0",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
